Adding role-based column visibility for bank statement search endpoint